[package]
name = "evm-ds"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56", default-features = false }
base64 = "0.13.0"
witnet-bn = "0.4.5"
bytes = "1.1.0"
clap = { version = "3.1.6", features = ["derive"] }
log4rs = { version = "1.1.1", features = ["all_components", "gzip"] }
ethereum = "0.12.0"
evm = { version = "0.35.0", features = ["with-serde", "tracing"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.25"
serde_cbor = "0.11.2"
futures = { version = "0.3.21", features = ["executor", "thread-pool"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
jsonrpc-client-transports = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils = "18.0.0"
hex = "0.4"
libsecp256k1 = "0.7.0"
log = "0.4.16"
num-bigint = "0.4"
num-integer = "0.1.45"
primitive-types = { version = "0.11.1", features = ["serde"] }
parity-tokio-ipc = "0.9"
protobuf = { version = "2.27.1",  features = ["with-bytes"] }
ripemd = "0.1.3"
sha2 = "0.10.6"
sha3 = "0.10.1"
tokio = { version = "1.17", features = ["full"] }

[build-dependencies]
protoc-rust = "2"

[patch.crates-io]
jsonrpc-ipc-server = { git = 'https://github.com/valeryz/jsonrpc', branch = "valeryz_fix_stream_eof" }
jsonrpc-http-server = { git = 'https://github.com/valeryz/jsonrpc', branch = "valeryz_fix_stream_eof" }
jsonrpc-server-utils = { git = 'https://github.com/valeryz/jsonrpc', branch = "valeryz_fix_stream_eof" }
jsonrpc-core = { git = 'https://github.com/valeryz/jsonrpc', branch = "valeryz_fix_stream_eof" }
jsonrpc-core-client = { git = 'https://github.com/valeryz/jsonrpc', branch = "valeryz_fix_stream_eof" }
jsonrpc-client-transports = { git = 'https://github.com/valeryz/jsonrpc', branch = "valeryz_fix_stream_eof" }
