[package]
name = "evm"
version = "0.37.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum", "tracing", "with-serde", "with-codec"]
edition = "2018"
rust-version = "1.61"

[dependencies]
auto_impl = "1.0"
ethereum = { version = "0.14", default-features = false }
log = { version = "0.4", default-features = false }
primitive-types = { version = "0.12", default-features = false, features = ["rlp"] }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Optional dependencies
environmental = { version = "1.1.2", default-features = false, optional = true }
scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

evm-core = { version = "0.37", path = "core", default-features = false, features = ["with-serde"] }
evm-gasometer = { version = "0.37", path = "gasometer", default-features = false, features = ["tracing"] }
evm-runtime = { version = "0.37", path = "runtime", default-features = false, features = ["tracing"] }

jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
jsonrpc-client-transports = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils = "18.0.0"
hex = "0.4"
libsecp256k1 = "0.7.0"
num-bigint = "0.4"
num-integer = "0.1.45"
parity-tokio-ipc = "0.9"
protobuf = { version = "2.27.1",  features = ["with-bytes"] }
ripemd = "0.1.3"
sha2 = "0.10.6"
tokio = { version = "1.17", features = ["full"] }
byteorder = "1.4.3"
bytes = "1.1.0"
futures = { version = "0.3.21", features = ["executor", "thread-pool"] }
witnet-bn = "0.4.5"
anyhow = { version = "1.0.56", default-features = false }
clap = { version = "3.1.6", features = ["derive"] }
base64 = "0.13.0"
log4rs = { version = "1.1.1", features = ["all_components", "gzip"] }
serde_yaml = "0.8.25"

[build-dependencies]
protoc-rust = "2"

[dev-dependencies]
criterion = "0.4"
hex = "0.4"

[[bench]]
name = "loop"
harness = false

[features]
default = ["std"]
std = [
	"ethereum/std",
	"log/std",
	"primitive-types/std",
	"rlp/std",
	"sha3/std",
	"environmental/std",
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	"evm-core/std",
	"evm-gasometer/std",
	"evm-runtime/std",
]
with-codec = [
	"scale-codec",
	"scale-info",
	"primitive-types/codec",
	"primitive-types/scale-info",
	"ethereum/with-codec",
	"evm-core/with-codec",
]
with-serde = [
	"serde",
	"primitive-types/serde",
	"evm-core/with-serde",
	"ethereum/with-serde",
]
tracing = [
	"environmental",
	"evm-gasometer/tracing",
	"evm-runtime/tracing",
]

[workspace]
members = [
	"core",
	"gasometer",
	"runtime",
	"fuzzer",
]
