add_subdirectory (common)
add_subdirectory (depends)
add_subdirectory (libConsensus)
add_subdirectory (libCrypto)
add_subdirectory (libData)
add_subdirectory (libDirectoryService)
add_subdirectory (libLookup)
add_subdirectory (libMediator)
add_subdirectory (libPersistence)
add_subdirectory (libPOW)
add_subdirectory (libNetwork)
add_subdirectory (libNode)
add_subdirectory (libServer)
add_subdirectory (libUtils)
add_subdirectory (libZilliqa)
add_subdirectory (cmd)

