add_subdirectory (cmd)
add_subdirectory (common)
add_subdirectory (depends)
add_subdirectory (diagnostic)
add_subdirectory (libConsensus)
add_subdirectory (libData)
add_subdirectory (libDirectoryService)
add_subdirectory (libLookup)
add_subdirectory (libMediator)
add_subdirectory (libMessage)
add_subdirectory (libNetwork)
add_subdirectory (libNode)
add_subdirectory (libPersistence)
add_subdirectory (libPOW)
#add_subdirectory (libProtoServer)
add_subdirectory (libRumorSpreading)
add_subdirectory (libServer)
add_subdirectory (libUtils)
add_subdirectory (libValidator)
add_subdirectory (libZilliqa)
add_subdirectory (libPythonRunner)
