#add_subdirectory (Consensus)
#add_subdirectory (Contracts)
add_subdirectory (Crypto)
add_subdirectory (Data)
add_subdirectory (depends)
#add_subdirectory (Incentives)
#add_subdirectory (libTestUtils)
add_subdirectory (Lookup)
add_subdirectory (Network)
add_subdirectory (Persistence)
#add_subdirectory (POW) 
add_subdirectory (Utils)
add_subdirectory (Zilliqa)
