[package]
name = "pdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdtlib = { path = "../pdtlib" }
pdtbq = { path = "../pdtbq" }
tokio = { version = "1.28.1", features = [ "macros", "rt-multi-thread", "fs", "process" ] }
primitive-types = { version="0.11.1", features = ["serde"] }
anyhow = "1.0.71"
clap = { version ="4.3.1", features = [ "derive" ] }
