[package]
name = "pdtbq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdtlib = { path = "../pdtlib" }
primitive-types = { version="0.11.1", features = ["serde"] }
clap = "4.2.4"
tokio = "1.27.0"
gcp-bigquery-client = "0.16.7"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = [ "derive" ] }
hex = "0.4.3"
sha2 = "0.10.6"

